--- a/src/Olbrasoft.Mapping.Mapster.DependencyInjection.Microsoft/Olbrasoft.Mapping.Mapster.DependencyInjection.Microsoft.csproj
+++ b/src/Olbrasoft.Mapping.Mapster.DependencyInjection.Microsoft/Olbrasoft.Mapping.Mapster.DependencyInjection.Microsoft.csproj
@@ -2,12 +2,16 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
+    <Authors>Jiří Tůma</Authors>
+    <Company>Olbrasoft</Company>
+    <Description>Register classes for Mapping</Description>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Mapster.DependencyInjection" Version="1.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.2" />
-    <PackageReference Include="Olbrasoft.Mapping.Mapster" Version="1.0.0" />
-    <PackageReference Include="Olbrasoft.Mapster.DependencyInjection.Microsoft" Version="1.0.0" />
+    <PackageReference Include="Olbrasoft.Mapping.Mapster" Version="1.0.2" />
   </ItemGroup>
 
 </Project>
